--- a/izone.html
+++ b/izone.html
@@ -336,9 +336,9 @@ body {
     <div id="player-content">
       <div id="album-art">
         <img src="https://i.scdn.co/image/ab67616d0000b27306d8af2032b49e9b0fa55829" class="active" id="_1">
-        <img src="https://static.wikia.nocookie.net/iz-one/images/4/45/HeartIzAlbumCoverDigital.jpg/revision/latest?cb=20190527004730" id="_2">
-        <img src="https://static.wikia.nocookie.net/iz-one/images/e/e0/BLOOM%2AIZ_Digital_Cover.jpg/revision/latest?cb=20200202153152" id="_3">
-        <img src="https://static.wikia.nocookie.net/iz-one/images/d/dc/Oneiric_Diary_Digital.jpg/revision/latest?cb=20200613150349" id="_4">
+        <img src="https://upload.wikimedia.org/wikipedia/en/4/4a/Heart_Iz_Cover.jpg" id="_2">
+        <img src="https://upload.wikimedia.org/wikipedia/en/e/e6/Iz%2AOne_-_Bloom%2AIz.png" id="_3">
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d1/Iz%2AOne_-_Oneiric_Diary.jpg/220px-Iz%2AOne_-_Oneiric_Diary.jpg" id="_4">
         <img src="https://i1.sndcdn.com/artworks-XREZpn70Rx7nm5op-WPXDmQ-t500x500.jpg" id="_5">
         <div id="buffer-box">Buffering ...</div>
       </div>
